@@ -180,6 +180,8 @@ lib/SPVM/Net/SSLeay/Util/OCSP.pm
 lib/SPVM/Net/SSLeay/Util/OCSP.spvm
 lib/SPVM/Net/SSLeay/Util/PKCS12.pm
 lib/SPVM/Net/SSLeay/Util/PKCS12.spvm
+lib/SPVM/Net/SSLeay/Util/X509.c
+lib/SPVM/Net/SSLeay/Util/X509.config
 lib/SPVM/Net/SSLeay/Util/X509.pm
 lib/SPVM/Net/SSLeay/Util/X509.spvm
 lib/SPVM/Net/SSLeay/X509.c
