@@ -17,6 +17,7 @@ class Net::SSLeay {
   use Net::SSLeay::Util;
   use Net::SSLeay::OPENSSL;
   use Net::SSLeay::OPENSSL_INIT_SETTINGS;
+  use Net::SSLeay::Util::X509;
   
   # Fields
   has ssl_ctx : Net::SSLeay::SSL_CTX;
